--- a/src/styles/components/App.module.css
+++ b/src/styles/components/App.module.css
@@ -1,14 +1,17 @@
 .chartContainer {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
   display: flex;
   height: calc(100vh - 4.2rem);
-  flex: 1;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
 }
 
 @media (max-width: 940px) {
   .chartContainer {
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 0;
+    padding: 1.2rem 0;
   }
 }
