--- a/src/styles/components/App.module.css
+++ b/src/styles/components/App.module.css
@@ -10,6 +10,12 @@
   padding: 2rem 0;
 }
 
+.title {
+  text-align: center;
+  color: var(--title);
+  font-size: 2.2rem;
+}
+
 @media (max-width: 940px) {
   .chartContainer {
     padding: 1.2rem 0;
