--- a/src/styles/components/Filter.module.css
+++ b/src/styles/components/Filter.module.css
@@ -1,7 +1,8 @@
 .filterBox {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding: .6rem 0;
+  width: 100%;
 }
 
 .filterBox p {
