--- a/src/styles/components/Charts.module.css
+++ b/src/styles/components/Charts.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 2rem 0;
+  padding: 2rem 2%;
 }
 
 .chartContainer > div:nth-child(2) {
